fix: add check role user for facility info